# Tiny

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Material.h  Mesh.h  README.md  SceneNode.h  Shader.h  ShaderProgram.h  Texture.cpp  Texture.h  Transform.h  VertexBuffer.h  main.cpp
assets/: default.frag  default.vert
cmake/: copy_assets.cmake
